2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainGenerator.*, src/components/ogre/TerrainPage.*, src/components/ogre/TerrainShader.*:
		* make it work with Mercator 0.2.2
		* began work with integrating Mercator Areas. It should be possible to add a new TerrainShader to a TerrainPage in the future. We'll start by just adding a new Pass, and later on we'll integrate it with the pixel shader.

2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/server/ServerService.cpp:
		* make it work with Atlas 0.5.95

2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberOgre.cpp:
		* make it work with Eris 1.3.5

2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.conf
		* show foliage by default

2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/ServerBrowserWidget.cpp:
		* catch segfaults on doubleclicking on a header in the grid
		* oops, make it compile against ConfigService

2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/FoliageArea.*, src/components/ogre/Foliage.*, src/components/ogre/TerrainPage.cpp:
		* use names for foliage entities instead of index
		* wave the grass

2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/programs/Grass.cg, media/materials/scripts/vegetation.material
		* added parameter for waving the grass
		* use the simplegrass mesh for regular grass since it contains less vertices

2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainGenerator.cpp:
		* require vertex shader capabilities for foliage

2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/Model.*:
		* fix memory leak

2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>
