@@ -72,12 +72,6 @@ public:
 	
 
 
-	/**
-	 * Adjust the height of the entity so that it "snaps" to the ground.
-	 * This is most often done by making a call to the containing node's
-	 * adjustHeightPositionForContainedNode method.
-	 */
-	virtual void adjustHeightPosition(); 
 	
 	
 	virtual void setVisible(bool visible);
